website/versioned_docs/version-0.60/safeareaview.md
---
id: version-0.60-safeareaview
title: SafeAreaView
original_id: safeareaview
---

The purpose of `SafeAreaView` is to render content within the safe area boundaries of a device. It is currently only applicable to iOS devices with iOS version 11 or later.

`SafeAreaView` renders nested content and automatically applies paddings to reflect the portion of the view that is not covered by navigation bars, tab bars, toolbars, and other ancestor views. Moreover, and most importantly, Safe Area's paddings reflect the physical limitation of the screen, such as rounded corners or camera notches (i.e. the sensor housing area on iPhone X).

### Usage Example

Simply wrap your top level view with a `SafeAreaView` with a `flex: 1` style applied to it. You may also want to use a background color that matches your application's design.

```SnackPlayer name=SafeAreaView
import React from 'react';
import { StyleSheet, Text, SafeAreaView } from 'react-native';

export default function App() {
  return (
    <SafeAreaView style={styles.container}>
      <Text>Page content</Text>
    </SafeAreaView>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
  },
});
```

---

# Reference

## Props

Inherits [View Props](view.md#props).

### `emulateUnlessSupported`

| Type | Required | Default |
| ---- | -------- | ------- |
| bool | No       | true    |
